--- a/src/Web/Components/BusinessMonths.razor
+++ b/src/Web/Components/BusinessMonths.razor
@@ -7,7 +7,7 @@
             {
                 if (month == 1)
                 {
-                    <th>@year</th>
+                    <th>@year.Number</th>
                 }
                 <td>@($"{this.MonthNames[month]}")</td>
             }
