--- a/src/Web/Components/BusinessMonths.razor
+++ b/src/Web/Components/BusinessMonths.razor
@@ -1,15 +1,12 @@
 @using Models;
 <table class="table table-striped">
-    @foreach (var row in DateTime.UtcNow.GetDecadeMonths().GroupBy(pair => pair.Year))
+    @foreach (Year year in DateTime.UtcNow.ToYear().Decade)
     {
         <tr>
-            @foreach (var (year, month) in row)
+            <th>@year.Number</th>
+            @foreach (Month month in year.Months)
             {
-                if (month == 1)
-                {
-                    <th>@year.Number</th>
-                }
-                <td>@($"{this.MonthNames[month]}")</td>
+                <td>@($"{MonthNames[month.Ordinal]}")</td>
             }
         </tr>    
     }
