--- a/src/Web/Components/BusinessMonths.razor
+++ b/src/Web/Components/BusinessMonths.razor
@@ -1,4 +1,4 @@
-@using Models;
+@using Models.Time
 <table class="table table-striped">
     @foreach (Year year in DateTime.UtcNow.ToYear().Decade)
     {
