Separated Types and behavior for handling time into their separate folders

--- a/src/Web/Components/BusinessMonths.razor
+++ b/src/Web/Components/BusinessMonths.razor
@@ -1,4 +1,5 @@
 @using Models.Time
+@using Models.Types
 <table class="table table-striped">
     @foreach (Year year in DateTime.UtcNow.ToYear().Decade)
     {
