--- a/src/Web/Components/Parts.razor
+++ b/src/Web/Components/Parts.razor
@@ -1,10 +1,12 @@
 @using Models.Types
+@using Models.Media;
 <table class="table table-striped">
     @{ int ordinal = 0;}
     <tr>
         <th>#</th>
         <th>Name</th>
         <th>SKU</th>
+        <th>Barcode</th>
     </tr>
     @foreach (Part part in AllParts.OrderBy(part => part.Name))
     {
@@ -12,6 +14,7 @@
             <th>@(++ordinal)</th>
             <th>@part.Name</th>
             <th>@part.Sku.Value</th>
+            <th><img src="data:@part.Sku.ToCode39(25).EncodeBase64().Content" /></th>
         </tr>
     }
 </table>
