--- a/src/Web/Pages/Index.cshtml
+++ b/src/Web/Pages/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
+<div class="text-left">
     @* <component type="typeof(BusinessMonths)" render-mode="Static" param-fortimestamp="@DateTime.UtcNow" /> *@
     <component type="typeof(Parts)" render-mode="Static" param-allparts="@Model.AllParts" />
 </div>
