--- a/src/Web/Pages/PartDetails.cshtml
+++ b/src/Web/Pages/PartDetails.cshtml
@@ -1,19 +1,27 @@
-@page
-@model Web.Pages.PartDetails
+@page "/partdetails/{id}"
+@model PartDetailsModel
+@using Models.Media
+
+<table class="table table-striped">
+    <tr>
+        <th>Id</th>
+        <td>@Model.Part.Id</td>
+    </tr>
+    <tr>
+        <th>SKU</th>
+        <td>@Model.Part.Sku.Value</td>
+    </tr>
+    <tr>
+        <th>Label</th>
+        <td>@Model.Part.Name</td>
+    </tr>
+    <tr>
+        <th>Barcode</th>
+        <td><img src="data:@Model.BarcodeImage.EncodeBase64().Content" /></td>
+    </tr>
+    
+</table>
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Part Details page";
 }
-
-<!DOCTYPE html>
-
-<html>
-<head>
-    <title></title>
-</head>
-<body>
-<div>
-    
-</div>
-</body>
-</html>
