Moved Types into their own respective files
This way its much more clean and readable although we are sometimes wasting a whole file for just one line of record

--- a/src/Web/Components/BusinessMonths.razor
+++ b/src/Web/Components/BusinessMonths.razor
@@ -1,5 +1,6 @@
 @using Models.Time
 @using Models.Types
+@using Models.Types.Common
 <table class="table table-striped">
     @foreach (Year year in DateTime.UtcNow.ToYear().Decade)
     {
