Moved Types regarding the business domain of components into their own respective folders

--- a/src/Web/Pages/Index.cshtml
+++ b/src/Web/Pages/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @using Models.Media
 @using Models.Types
+@using Models.Types.Components
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
